<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dip">

   

  <TextView 

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="35sp "
		android:gravity="center"
		android:layout_marginBottom="60dip"/>

  <Button
      android:id="@+id/Button01"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/play" />

  <Button
      android:id="@+id/Button02"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/opc" />

  <Button
      android:id="@+id/Button03"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/insert" />

  <Button
      android:id="@+id/Button04"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/salir" />

  </LinearLayout>